continuing with report writing and made an update worldmap

--- a/report/OHIBib.bib
+++ b/report/OHIBib.bib
@@ -20,3 +20,192 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	pages = {450},
 	file = {Wheaton et al_2021_Coastal Communities, Leisure and Wellbeing.pdf:/home/charlie/Zotero/storage/KHFJUPXW/Wheaton et al_2021_Coastal Communities, Leisure and Wellbeing.pdf:application/pdf;Snapshot:/home/charlie/Zotero/storage/N68RJKF6/htm.html:text/html},
 }
+
+@article{foley_swimming_2015,
+	title = {Swimming in {Ireland}: {Immersions} in therapeutic blue space},
+	volume = {35},
+	issn = {1353-8292},
+	shorttitle = {Swimming in {Ireland}},
+	url = {https://www.sciencedirect.com/science/article/pii/S1353829214001452},
+	doi = {10.1016/j.healthplace.2014.09.015},
+	abstract = {This paper explores swimming as a healthy body-water engagement in blue space at selected outdoor Irish swimming spots. Associated theoretical underpinnings draw from non-representational theories (NRT). Taking as a starting point the idea of immersion, the paper argues for a deeper application of NRT to blue space settings. In addition, the paper reflects recent therapeutic geographies research on differential experiences of health and wellbeing linked to such immersions. Methodologically, the paper uses observer participation and swimmer’s own voices to draw affective and embodied accounts from on and within water. The act of swimming as an emplaced and performed therapeutic encounter is highlighted along with a more critical discussion of contested narratives associated with risk and respect. Theoretical learning suggests the need for greater attention to the production of affect from across the life-course and a fuller articulation of the in-betweenness of theory and empirical testimonies. Swimming emerges from the study as a potentially valuable health and wellbeing resource that can be more fully harnessed to inform wider public health policy.},
+	language = {en},
+	urldate = {2022-01-20},
+	journal = {Health \& Place},
+	author = {Foley, Ronan},
+	month = sep,
+	year = {2015},
+	keywords = {Blue space, Ireland, NRT, Swimming, Therapeutic landscapes},
+	pages = {218--225},
+	file = {Foley_2015_Swimming in Ireland.pdf:/home/charlie/Zotero/storage/QZKFGC2N/Foley_2015_Swimming in Ireland.pdf:application/pdf;ScienceDirect Snapshot:/home/charlie/Zotero/storage/ZTLAKNWL/S1353829214001452.html:text/html},
+}
+
+@article{bell_seeking_2015,
+	title = {Seeking everyday wellbeing: {The} coast as a therapeutic landscape},
+	volume = {142},
+	issn = {0277-9536},
+	shorttitle = {Seeking everyday wellbeing},
+	url = {https://www.sciencedirect.com/science/article/pii/S0277953615300630},
+	doi = {10.1016/j.socscimed.2015.08.011},
+	abstract = {Recent research suggests coastal environments may promote human health and wellbeing. This article explores the diverse coastal experiences sought out by residents of two towns in south west England to promote and preserve their personal wellbeing in the context of their everyday lives. It draws on the findings of an in-depth interpretive study conducted from May to November 2013 that examined the relative contribution of varied green and blue space experiences to individual wellbeing through the life course. Personalised activity maps produced using accelerometer and Global Positioning System (GPS) data were used to guide in-depth geo-narrative interviews with a purposive sample of 33 participants. This was combined with a subset of nine case study go-along interviews in places deemed therapeutic by the participants themselves, offering deeper insight into the lived experiences and relationships playing out within such places. Situated in a novel adaptation of the therapeutic landscapes framework, this article explores how symbolic, achievement-oriented, immersive and social experiences contributed to participants' sense of wellbeing in their local coastal areas. Participants expressed particularly strong and often enduring connections to the local coastline, with different coastal stretches perceived to cater for varied therapeutic needs and interests, at multiple scales and intensities. The findings suggest the need for greater acknowledgement of people's emotional, deeply embodied and often shared connections to the coast within coastal management policy and practice, both nationally and internationally. Importantly, such efforts should recognise the fluid, dynamic nature of this land-sea boundary, and the valued therapeutic experiences linked to this fluidity.},
+	language = {en},
+	urldate = {2022-01-20},
+	journal = {Social Science \& Medicine},
+	author = {Bell, Sarah L. and Phoenix, Cassandra and Lovell, Rebecca and Wheeler, Benedict W.},
+	month = oct,
+	year = {2015},
+	keywords = {Blue space, Geo-narratives, South-west England, Therapeutic landscapes, Wellbeing},
+	pages = {56--67},
+	file = {Bell et al_2015_Seeking everyday wellbeing.pdf:/home/charlie/Zotero/storage/QZDRAJNV/Bell et al_2015_Seeking everyday wellbeing.pdf:application/pdf;ScienceDirect Snapshot:/home/charlie/Zotero/storage/HTGXVU4Q/S0277953615300630.html:text/html},
+}
+
+@book{burdsey_race_2016,
+	title = {Race, place and the seaside: {Postcards} from the edge},
+	isbn = {1-137-45012-6},
+	publisher = {Springer},
+	author = {Burdsey, Daniel},
+	year = {2016},
+}
+
+@article{wuebben_surfing_2019,
+	title = {Surfing between {Blue} {Humanities} and {Blue} {Economies} in {Cantabria}, {Spain}},
+	volume = {27},
+	issn = {1069-0697},
+	number = {1-2},
+	journal = {symplokē},
+	author = {Wuebben, Daniel and González-Trueba, Juan José},
+	year = {2019},
+	note = {Publisher: JSTOR},
+	pages = {65--78},
+}
+
+@article{olive_understanding_2021,
+	title = {Understanding {Blue} {Spaces}: {Sport}, {Bodies}, {Wellbeing}, and the {Sea}},
+	volume = {45},
+	issn = {0193-7235},
+	shorttitle = {Understanding {Blue} {Spaces}},
+	url = {https://doi.org/10.1177/0193723520950549},
+	doi = {10.1177/0193723520950549},
+	abstract = {This article introduces the special issue (JSSI 45.1 and 45.2) on ‘Understanding Blue Spaces’ which examines relationships between blue spaces, sport, physical activity, and wellbeing. The articles progress conversations across humanities, social sciences and inter-disciplinary areas of research on diverse sporting practices, that span local to trans-national contexts. This collection offers new insights into politics, possibilities, and problems of the role of blue spaces in our wellbeing—individually, socially, and ecologically. In addition to outlining the 10 articles in the SI, which include ocean swimming, surfing, sailing/yachting, and waka ama paddling, we contextualize this work, discussing key thematic areas both across these papers, and in the wider interdisciplinary body of work on blue spaces, wellbeing, and sport. Specifically, we outline the role of physical activities and leisure practices in how we access, understand, experience, and develop relationships to seas and oceans, as well as to self, places and communities of human and non-human others. We also discuss the ways in which particular bodies, individuals, and communities (human and more-than-human) are marginalized or excluded, and the need for understanding concepts such as wellbeing, place, and self beyond dominant European traditions. This SI highlights how localised experiences of blue spaces can be, while emphasising the need to recognize diverse cultural, economic, geographic, sociodemographic, and political factors that contribute to a disconnect with, or exclusion from blue spaces, impacting who can use blue spaces, how they can be used, how they can be researched, and how power is reproduced and contested.},
+	language = {en},
+	number = {1},
+	urldate = {2022-01-20},
+	journal = {Journal of Sport and Social Issues},
+	author = {Olive, Rebecca and Wheaton, Belinda},
+	month = feb,
+	year = {2021},
+	note = {Publisher: SAGE Publications Inc},
+	keywords = {blue space, coast, hydrophilia, hydrophobia, place-based, surfing, swimming, wellbeing},
+	pages = {3--19},
+	file = {Olive_Wheaton_2021_Understanding Blue Spaces.pdf:/home/charlie/Zotero/storage/9CB9L7DT/Olive_Wheaton_2021_Understanding Blue Spaces.pdf:application/pdf},
+}
+
+@article{phoenix_segregation_2021,
+	title = {Segregation and the {Sea}: {Toward} a {Critical} {Understanding} of {Race} and {Coastal} {Blue} {Space} in {Greater} {Miami}},
+	volume = {45},
+	issn = {0193-7235},
+	shorttitle = {Segregation and the {Sea}},
+	url = {https://doi.org/10.1177/0193723520950536},
+	doi = {10.1177/0193723520950536},
+	abstract = {There is a growing body of research signaling the health and wellbeing benefits of being in blue space. Here, we advance this intellectual agenda by critically examining perceptions and experiences of coastal blue space among residents of a disadvantaged, predominantly African American community who report limited engagement with their local coastal blue space, despite beachgoing being considered mainstream by a previous generation. Drawing on focus group data and sensitized to a range of theoretical perspectives aligned with race, space, and social class, we advance theoretical and empirical knowledge pertaining to blue space engagement. In doing so, we demonstrate the need for more critically informed, theoretically appropriate research in this area, which connects individual stories of the sea to the wider historical, social, and political settings in which relationships with blue space are framed and (re)produced.},
+	language = {en},
+	number = {2},
+	urldate = {2022-01-20},
+	journal = {Journal of Sport and Social Issues},
+	author = {Phoenix, Cassandra and Bell, Sarah L. and Hollenbeck, Julie},
+	month = apr,
+	year = {2021},
+	note = {Publisher: SAGE Publications Inc},
+	keywords = {blue space, Bourdieu, critical race theory, leisure, racialization of space},
+	pages = {115--137},
+	file = {Phoenix et al_2021_Segregation and the Sea.pdf:/home/charlie/Zotero/storage/BRW7AG7Y/Phoenix et al_2021_Segregation and the Sea.pdf:application/pdf},
+}
+
+@misc{httpsplusgooglecomunesco_united_2017,
+	title = {United {Nations} {Decade} of {Ocean} {Science} for {Sustainable} {Development} (2021-2030)},
+	url = {https://en.unesco.org/ocean-decade},
+	language = {en},
+	urldate = {2022-01-20},
+	journal = {UNESCO},
+	author = {https://plus.google.com/+UNESCO},
+	month = feb,
+	year = {2017},
+	file = {Snapshot:/home/charlie/Zotero/storage/F7BME96B/ocean-decade.html:text/html},
+}
+
+@book{10.5555/1593511,
+ author = {Van Rossum, Guido and Drake, Fred L.},
+ title = {Python 3 Reference Manual},
+ year = {2009},
+ isbn = {1441412697},
+ publisher = {CreateSpace},
+ address = {Scotts Valley, CA}
+}
+
+@Manual{r_studio,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2021},
+  url = {https://www.R-project.org/},
+}
+
+@Manual{QGIS_software,
+      title = {QGIS Geographic Information System},
+      author = {{QGIS Development Team}},
+      organization = {QGIS Association},
+      year = {2022},
+      url = {https://www.qgis.org},
+    }
+    
+@article{halpern_building_2020,
+	title = {Building on a {Decade} of the {Ocean} {Health} {Index}},
+	volume = {2},
+	issn = {2590-3322},
+	url = {https://www.sciencedirect.com/science/article/pii/S2590332219302702},
+	doi = {10.1016/j.oneear.2019.12.011},
+	abstract = {With oceans under increasing pressure from human activities, sustainable development and conservation efforts are working to set meaningful targets for healthy oceans. Determining whether those targets are achieved requires indicators that measure status and progress. Here, I reflect upon lessons learned from a decade of developing and calculating the Ocean Health Index.},
+	language = {en},
+	number = {1},
+	urldate = {2022-01-20},
+	journal = {One Earth},
+	author = {Halpern, Benjamin S.},
+	month = jan,
+	year = {2020},
+	pages = {30--33},
+	file = {Halpern_2020_Building on a Decade of the Ocean Health Index.pdf:/home/charlie/Zotero/storage/5SAZF6BU/Halpern_2020_Building on a Decade of the Ocean Health Index.pdf:application/pdf;ScienceDirect Snapshot:/home/charlie/Zotero/storage/828R25TU/S2590332219302702.html:text/html},
+}
+
+@misc{htoon_guide_2020,
+	title = {A {Guide} {To} {KNN} {Imputation}},
+	url = {https://medium.com/@kyawsawhtoon/a-guide-to-knn-imputation-95e2dc496e},
+	abstract = {How to handle missing data in your dataset with Scikit-Learn’s KNN Imputer},
+	language = {en},
+	urldate = {2022-01-20},
+	journal = {Medium},
+	author = {Htoon, Kyaw Saw},
+	month = jul,
+	year = {2020},
+	file = {Snapshot:/home/charlie/Zotero/storage/QY674E49/a-guide-to-knn-imputation-95e2dc496e.html:text/html},
+}
+
+@article{beretta_nearest_2016,
+	title = {Nearest neighbor imputation algorithms: a critical evaluation},
+	volume = {16},
+	issn = {1472-6947},
+	shorttitle = {Nearest neighbor imputation algorithms},
+	url = {https://doi.org/10.1186/s12911-016-0318-z},
+	doi = {10.1186/s12911-016-0318-z},
+	abstract = {Nearest neighbor (NN) imputation algorithms are efficient methods to fill in missing data where each missing value on some records is replaced by a value obtained from related cases in the whole set of records. Besides the capability to substitute the missing data with plausible values that are as close as possible to the true value, imputation algorithms should preserve the original data structure and avoid to distort the distribution of the imputed variable. Despite the efficiency of NN algorithms little is known about the effect of these methods on data structure.},
+	number = {3},
+	urldate = {2022-01-20},
+	journal = {BMC Medical Informatics and Decision Making},
+	author = {Beretta, Lorenzo and Santaniello, Alessandro},
+	month = jul,
+	year = {2016},
+	keywords = {Imputation Algorithm, Imputation Method, Minkowski Norm, Near Neighbour, Near Neighbour Algorithm},
+	pages = {74},
+	file = {Beretta_Santaniello_2016_Nearest neighbor imputation algorithms.pdf:/home/charlie/Zotero/storage/LTG5W5EY/Beretta_Santaniello_2016_Nearest neighbor imputation algorithms.pdf:application/pdf;Snapshot:/home/charlie/Zotero/storage/4FYSR249/s12911-016-0318-z.html:text/html},
+}
+
